<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRestaurants"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp" />

    <ImageButton
        android:id="@+id/fabAddRestaurant"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dp"

        android:background="@android:color/transparent"
        android:src="@android:drawable/ic_input_add"
        android:scaleType="center"
        android:contentDescription="Add" />
</FrameLayout>
