...
                android:maxLines="3"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:background="@android:color/transparent" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:minWidth="72dp"
                android:text="SUBMIT"
                android:textSize="12sp"
                android:textAllCaps="true"
...
